# tuntun

./: .gitignore  AWS_PROVISION.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  tuntun.nix
crates/tuntun_auth/: Cargo.toml
crates/tuntun_auth/src/: cookie.rs  lib.rs  password.rs  rate_limit.rs  session.rs  tunnel_auth.rs
crates/tuntun_auth/tests/: integration.rs
crates/tuntun_caddy/: Cargo.toml
crates/tuntun_caddy/src/: error.rs  lib.rs  model.rs  render.rs
crates/tuntun_cli/: Cargo.toml
crates/tuntun_cli/src/: config.rs  main.rs  nix_eval.rs  tls.rs
crates/tuntun_cli/src/adapters/: clock.rs  fs.rs  http.rs  mod.rs  process.rs  secret.rs
crates/tuntun_cli/src/commands/: bless.rs  blessings.rs  daemon.rs  deregister.rs  inspect.rs  login.rs  logs.rs  mod.rs  register.rs  status.rs  unbless.rs  whoami.rs
crates/tuntun_cli/src/tunnel/: client.rs  mod.rs  oneshot.rs  reconnect.rs
crates/tuntun_config/: Cargo.toml
crates/tuntun_config/src/: error.rs  lib.rs  model.rs  parse.rs
crates/tuntun_config/tests/: parse.rs
crates/tuntun_core/: Cargo.toml
crates/tuntun_core/src/: crypto.rs  dns.rs  error.rs  http.rs  id.rs  ids.rs  lib.rs  ports.rs  process.rs  secret.rs  testing.rs  time.rs
crates/tuntun_dns/: Cargo.toml
crates/tuntun_dns/src/: error.rs  lib.rs  reconcile.rs
crates/tuntun_dns/src/porkbun/: adapter.rs  creds.rs  mod.rs  request.rs  response.rs  wire.rs
crates/tuntun_dns/tests/: porkbun_adapter.rs  reconcile.rs
crates/tuntun_proto/: Cargo.toml
crates/tuntun_proto/src/: codec.rs  error.rs  frames.rs  lib.rs
crates/tuntun_proto/tests/: roundtrip.rs
crates/tuntun_server/: Cargo.toml
crates/tuntun_server/src/: auth_endpoint.rs  caddy_supervisor.rs  config.rs  dns_reconciler.rs  main.rs  registry.rs  tls.rs
crates/tuntun_server/src/adapters/: clock.rs  fs.rs  http.rs  mod.rs  process.rs  secret.rs
crates/tuntun_server/src/commands/: mod.rs  print_config.rs  reconcile_dns.rs  run.rs  tcp_forward.rs
crates/tuntun_server/src/tunnel/: acceptor.rs  bastion.rs  mod.rs  per_service_listener.rs  session.rs
examples/: consumer-flake.nix  tuntun.nix
nix/: home-manager-module.nix  lib.nix  nixos-module.nix
nix/hosts/: tuntun-aws.nix
scripts/: brochureware.rs  mint-tenant-password.rs  regen-client-keys.rs  regen-server-keys.rs  smoke-test.rs
