[package]
name = "tuntun_auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "tuntun auth: Argon2id verification, ed25519 session tokens, cookie codec, rate limit. ZERO I/O."

[lints]
workspace = true

[dependencies]
tuntun_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
argon2 = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rand_core = { workspace = true }
