[package]
name = "tuntun_caddy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "tuntun Caddyfile generator. ZERO I/O — pure templating."

[lints]
workspace = true

[dependencies]
tuntun_core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
