[package]
name = "tuntun_config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "tuntun config: project schema (parsed from Nix-emitted JSON). ZERO I/O."

[lints]
workspace = true

[dependencies]
tuntun_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
