[package]
name = "tuntun_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "tuntun core: domain types, port traits, errors. Performs ZERO I/O."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
bytes = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
rand_core = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { version = "1", features = ["macros", "rt"] }
