[package]
name = "tuntun_dns"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "tuntun DNS: typed Porkbun API client logic. Performs ZERO I/O — uses HttpPort."

[lints]
workspace = true

[dependencies]
tuntun_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
