[package]
name = "tuntun_proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "tuntun control-plane wire protocol. ZERO I/O — pure codec."

[lints]
workspace = true

[dependencies]
tuntun_core = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
